--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/solicitud-novedad/solicitud-novedad.component.html
@@ -31,9 +31,8 @@
     </p>
     <p>
       <strong>Valor del contrato:</strong>
-      <span>
-        {{ novedad.proyectosContrato[0].valorTotal | currency:'COP':'symbol-narrow':'.0-0' }}
-      </span>
+      <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+        novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
     </p>
     <p>
       <strong>Plazo:</strong>
