--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/validar-novedad-contrato-interventoria/validar-novedad-contrato-interventoria.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <h1 class="title-menu--h1">
-      <span *ngIf="true"> Verificar </span>
+      <span *ngIf="true"> Validar </span>
       <span *ngIf="false"> Ver detalle/Editar validación de </span>
       solicitud de novedad {{ novedad.numeroSolicitud }}
     </h1>
@@ -45,9 +45,8 @@
       </p>
       <p>
         <strong>Valor del contrato:</strong>
-        <span>
-          {{ novedad.proyectosContrato[0].valorTotal | currency: '':'symbol-narrow':'.0-0' }}
-        </span>
+        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+          novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
       </p>
       <p>
         <strong>Plazo:</strong>
