--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-obra/ver-detalle-solic-nov-obra.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-solicitud-novedades/components/ver-detalle-solic-nov-obra/ver-detalle-solic-nov-obra.component.html
@@ -40,9 +40,8 @@
       </p>
       <p>
         <strong>Valor del contrato:</strong>
-        <span>
-          {{ novedad.proyectosContrato[0].valorTotal | currency: '':'symbol-narrow':'.0-0' }}
-        </span>
+        <span>{{ (novedad.contrato?.contratacion?.disponibilidadPresupuestal?.length > 0 ? 
+          novedad.contrato?.contratacion?.disponibilidadPresupuestal[0]?.valorSolicitud : 0 ) | currency: '':'symbol':'3.0' }}</span>
       </p>
       <p>
         <strong>Plazo:</strong>
