Debug Novedades Contractuales :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/traslado-recursos-gbftrec/traslado-recursos-gbftrec.component.html
@@ -113,7 +113,8 @@
     </mat-card-content>
   </mat-card>
 <!--SOLO PARA EFECTOS DE MAQUETACIÓN-->
-<div class="text-center mb-3em mt-2em animatedDown" *ngIf="addressForm.get('requiereTransladoRecursos').value === true" >
+<div  class="text-center mb-3em mt-2em animatedDown"
+      *ngIf="addressForm.get('requiereTransladoRecursos').value === true && addressForm.get( 'justificacionTrasladoAportanteFuente' ).value !== null && balanceFinancieroId > 0">
     <a [routerLink]="[ '/gestionarBalanceFinancieroTrasladoRecursos/registrarTraslado', id ]" mat-raised-button color="accent" class="btn-cargar-proyecto">Registrar traslado</a><br>  
 </div>
 <app-tabla-traslados-gbftrec *ngIf="addressForm.get('requiereTransladoRecursos').value === true"></app-tabla-traslados-gbftrec>
