--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -58,12 +58,12 @@
       </th>
       <td mat-cell *matCellDef="let element">
       
-      <section *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '11' && element.estadoCodigo !== '17'">
+      <section *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '11' && element.estadoCodigo !== '17' && element.estadoCodigo !== '27'">
         <span class="info-text d-block m-0 completo" ></span>
         Completo
       </section>
 
-      <section *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17' || element.estadoCodigo === '10'">
+      <section *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17' || element.estadoCodigo === '27'|| element.estadoCodigo === '10'">
         <span class="info-text d-block m-0" 
           [class.sin-diligenciar]="element.registroCompletoTramiteNovedades !== true"
           [class.completo]="element.registroCompletoTramiteNovedades === true"></span>
@@ -85,13 +85,13 @@
 
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           [routerLink]="[ 'registrarRevisionJuridica', element.novedadContractualId ]"
-          *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17' || (element.estadoCodigo === '10' && element.registroCompletoTramiteNovedades != null)">
+          *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17' || element.estadoCodigo === '27' || (element.estadoCodigo === '10' && element.registroCompletoTramiteNovedades != null)">
           Ver detalle/Editar
         </a>
         
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         (click)="EnviarAComite(element.novedadContractualId)"
-        *ngIf="element.estadoCodigo === '17' && 
+        *ngIf="(element.estadoCodigo === '17' || element.estadoCodigo === '27') && 
                element.registroCompletoTramiteNovedades === true &&
                element.vaComite === true &&
                !(element.novedadContractual.deseaContinuar === false && 
@@ -101,7 +101,7 @@
 
           <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           (click)="AprobacionTecnicaJuridica(element.novedadContractualId)"
-          *ngIf="element.estadoCodigo === '17' && 
+          *ngIf="(element.estadoCodigo === '17'  || element.estadoCodigo === '27') && 
                  element.novedadContractual.deseaContinuar === true && 
                  element.registroCompletoTramiteNovedades === true &&
                  element.vaComite === false" >
@@ -110,7 +110,7 @@
         </button>
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         [routerLink]="[ 'verDetalle', element.novedadContractualId ]"
-        *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '11' && element.estadoCodigo !== '17' ">
+        *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '11' && element.estadoCodigo !== '17'  && element.estadoCodigo !== '27' ">
         Ver detalle
       </a>
       
@@ -123,7 +123,7 @@
       <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
       (click)="cancelarNovedad(element.novedadContractualId)"
       *ngIf="
-              element.estadoCodigo === '17' && 
+              (element.estadoCodigo === '17' || element.estadoCodigo === '27') && 
               element.novedadContractual.deseaContinuar === false && 
               element.novedadContractual.razonesNoContinuaProceso">
         Cancelar novedad
