--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/ver-detalle-tramite/ver-detalle-tramite.component.html
@@ -169,7 +169,7 @@
         </mat-card>
 
       </mat-expansion-panel>
-      <mat-expansion-panel class="expansion-style">
+      <mat-expansion-panel class="expansion-style" *ngIf="!esNoFirma">
         <mat-expansion-panel-header class="expansion-style--header">
           <mat-panel-title class="expansion-style--title">
             Registrar firmas
