--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-novedades-aprobadas/components/tabla-novedades-aprobadas/tabla-novedades-aprobadas.component.html
@@ -88,21 +88,19 @@
           *ngIf="element.estadoCodigo === '11' || element.estadoCodigo === '17' || element.estadoCodigo === '27' || (element.estadoCodigo === '10' && element.registroCompletoTramiteNovedades != null)">
           Ver detalle/Editar
         </a>
-        
+        <!--Se quito las condiciones de element.vaComite === true-->
         <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         (click)="EnviarAComite(element.novedadContractualId)"
         *ngIf="(element.estadoCodigo === '17'&& 
                element.registroCompletoTramiteNovedades === true &&
-               element.vaComite === true &&
                !(element.novedadContractual.deseaContinuar === false && 
                element.novedadContractual.razonesNoContinuaProceso)) || 
                (element.estadoCodigo === '27' && 
-               element.registroCompletoTramiteNovedades === true &&
-               element.vaComite === true)" >
+               element.registroCompletoTramiteNovedades === true)" >
           Enviar a comité técnico
         </button>
-
-          <button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
+        <!--Ninguna va a tramite/ todas a comite-->
+        <!--<button mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
           (click)="AprobacionTecnicaJuridica(element.novedadContractualId)"
           *ngIf="(element.estadoCodigo === '17' && 
                  element.novedadContractual.deseaContinuar === true && 
@@ -112,7 +110,7 @@
                  element.vaComite === false)" >
           Enviar trámite
         
-        </button>
+        </button>-->
         <a mat-button color="warn" mat-raised-button color="accent" class="btn-table" type="button"
         [routerLink]="[ 'verDetalle', element.novedadContractualId ]"
         *ngIf="element.estadoCodigo !== '10' && element.estadoCodigo !== '11' && element.estadoCodigo !== '17'  && element.estadoCodigo !== '27' ">
