--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion/form-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-procesos-contractuales/components/form-contratacion/form-contratacion.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center mt-2em" *ngIf="dataContratacion.numeroSolicitud.length > 0">
+<div class="container text-center mt-2em" *ngIf="dataContratacion.contratacionId > 0">
   <div class="text-right">
     <a routerLink="/procesosContractuales" mat-button color="primary" class="btn-regresar">
       <img src="assets/img/icon/regresar.svg" alt="Regresar">
