Integracion Balance Financiero V7 :package:

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-descuentos-direccion-tecnica/form-descuentos-direccion-tecnica.component.html
@@ -3,7 +3,7 @@
         <mat-accordion formArrayName="fases" *ngFor="let solicitudPagoFase of fases.controls; index as i">
             <mat-expansion-panel class="expansion-style sub-expansion" [formGroup]="solicitudPagoFase">
                 <mat-expansion-panel-header class="expansion-style--header">
-                    <mat-panel-title class="expansion-style--title sin-diligenciar">
+                    <mat-panel-title class="expansion-style--title" [ngClass]="solicitudPagoFase.get( 'semaforo' ).value">
                         Descuentos Dirección Técnica - {{ solicitudPagoFase.get( 'esPreconstruccion' ).value === true ? 'Fase 1' : 'Fase 2' }}
                     </mat-panel-title>
                 </mat-expansion-panel-header>
@@ -11,7 +11,7 @@
                 <mat-accordion *ngIf="getDescuentos( i ).length > 0">
                     <mat-expansion-panel class="expansion-style sub-expansion-black" formArrayName="descuentos" *ngFor="let descuento of getDescuentos( i ).controls; index as j">
                         <mat-expansion-panel-header class="expansion-style--header">
-                            <mat-panel-title class="expansion-style--title">
+                            <mat-panel-title class="expansion-style--title" [ngClass]="descuento.get( 'semaforo' ).value">
                                 Descuento {{ j + 1 }}
                             </mat-panel-title>
                         </mat-expansion-panel-header>
