--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/form-orden-giro-seleccionada/form-orden-giro-seleccionada.component.html
@@ -99,14 +99,14 @@
 
         <mat-expansion-panel class="expansion-style">
             <mat-expansion-panel-header class="expansion-style--header">
-                <mat-panel-title class="expansion-style--title sin-diligenciar">
+                <mat-panel-title class="expansion-style--title" [ngClass]="semaforoDetalle">
                     Detalle del giro
                 </mat-panel-title>
             </mat-expansion-panel-header>
             <mat-accordion>
                 <mat-expansion-panel class="expansion-style sub-expansion">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
+                        <mat-panel-title class="expansion-style--title">
                             Porcentajes de participación
                         </mat-panel-title>
                     </mat-expansion-panel-header>
@@ -116,7 +116,7 @@
             <mat-accordion>
                 <mat-expansion-panel class="expansion-style sub-expansion">
                     <mat-expansion-panel-header class="expansion-style--header">
-                        <mat-panel-title class="expansion-style--title ">
+                        <mat-panel-title class="expansion-style--title">
                             Información fuente de recursos
                         </mat-panel-title>
                     </mat-expansion-panel-header>
@@ -126,12 +126,14 @@
 
             <app-form-descuentos-direccion-tecnica  [solicitudPago]="solicitudPago"
                                                     [esVerDetalle]="esVerDetalle"
-                                                    [esRegistroNuevo]="esRegistroNuevo">
+                                                    [esRegistroNuevo]="esRegistroNuevo"
+                                                    (estadoSemaforo)="semaforoDescuentos = $event; checkEstadoSemaforo()">
             </app-form-descuentos-direccion-tecnica>
 
             <app-form-tercero-causacion [solicitudPago]="solicitudPago"
                                         [esVerDetalle]="esVerDetalle"
-                                        [esRegistroNuevo]="esRegistroNuevo">
+                                        [esRegistroNuevo]="esRegistroNuevo"
+                                        (estadoSemaforo)="semaforoTerceroCausacion = $event; checkEstadoSemaforo()">
             </app-form-tercero-causacion>
         </mat-expansion-panel>
     </mat-accordion>
